# redisfi

./: Dockerfile  LICENSE.md  NOTICE.md  README.md  compose-Dockerfile  docker-compose.yml  nginx.conf  packer.json  pyproject.toml
ci/: build-compose.yml  build-from-ssl-base.yml  build.yml  pipeline.yml  run_tests.yml  vars-builds.yml
data/: components.json  crypto_metadata.json  funds.json  portfolio.json
dockerfiles/: app.dockerfile  base.dockerfile  deployed.dockerfile  full.dockerfile  local.dockerfile  ssl.dockerfile
gallery/: db-readycheck.yml  deploy.yml  description.md  pipeline.yml  teardown.yml  walkthrough.md
packer/: app.json  app.pkr.hcl  cluster.json  cluster.pkr.hcl
redisfi/: cli.py  compose.py  db.py
redisfi/bridge/: commands.py
redisfi/bridge/adapter/: alpaca.py  base.py  file.py  mock.py  yahoo.py  yh.py
redisfi/db/stream/: reader.py  writer.py
redisfi/tool/: commands.py  create_db.py  generate_json_datafiles.py
redisfi/web/: api.py  app.py  commands.py  research.py
redisfi/web/research/: __init__.py  api.py  utils.py
redisfi/web/templates/: asset.html  asset.jinja  base.html  base.jinja  fund.html  fund.jinja  landing.jinja  overview.html  overview.jinja  results.html  results.jinja
redisfi/web/templates/research/: overview.html  results-ft.html  results-vss.html  results.html
