[tool.poetry]
name = "redisfi"
version = "0.1.0"
description = ""
authors = ["Adi Wabisabi <adi.wabisabi@redis.com>"]

[tool.poetry.scripts]
redisfi = "redisfi.cli:run"

[tool.poetry.dependencies]
python = "~3.9"
cleo = "^0.8.1"
redis = "^4.1.2"
alpaca-trade-api = "^1.5.0"
Flask = "^2.0.2"
gunicorn = "^20.1.0"
Flask-SocketIO = "^5.1.1"
gevent = "^21.12.0"
gevent-websocket = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
